--- a/syntax.css
+++ b/syntax.css
@@ -1,85 +1,86 @@
-/* Background */ .bg { color: #f8f8f2; background-color: #272822 }
-/* PreWrapper */ .chroma { color: #f8f8f2; background-color: #272822; }
+/* Background */ .bg { color:#ebdbb2;background-color:#282828; }
+/* PreWrapper */ .chroma { color:#ebdbb2;background-color:#282828; }
 /* Other */ .chroma .x {  }
-/* Error */ .chroma .err { color: #960050; background-color: #1e0010 }
+/* Error */ .chroma .err {  }
 /* CodeLine */ .chroma .cl {  }
-/* LineTableTD */ .chroma .lntd { vertical-align: top; padding: 0; margin: 0; border: 0; }
-/* LineTable */ .chroma .lntable { border-spacing: 0; padding: 0; margin: 0; border: 0; }
-/* LineHighlight */ .chroma .hl { background-color: #ffffcc }
-/* LineNumbersTable */ .chroma .lnt { white-space: pre; user-select: none; margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #7f7f7f }
-/* LineNumbers */ .chroma .ln { white-space: pre; user-select: none; margin-right: 0.4em; padding: 0 0.4em 0 0.4em;color: #7f7f7f }
-/* Line */ .chroma .line { display: flex; }
-/* Keyword */ .chroma .k { color: #66d9ef }
-/* KeywordConstant */ .chroma .kc { color: #66d9ef }
-/* KeywordDeclaration */ .chroma .kd { color: #66d9ef }
-/* KeywordNamespace */ .chroma .kn { color: #f92672 }
-/* KeywordPseudo */ .chroma .kp { color: #66d9ef }
-/* KeywordReserved */ .chroma .kr { color: #66d9ef }
-/* KeywordType */ .chroma .kt { color: #66d9ef }
+/* LineLink */ .chroma .lnlinks { outline:none;text-decoration:none;color:inherit }
+/* LineTableTD */ .chroma .lntd { vertical-align:top;padding:0;margin:0;border:0; }
+/* LineTable */ .chroma .lntable { border-spacing:0;padding:0;margin:0;border:0; }
+/* LineHighlight */ .chroma .hl { background-color:#3d3d3d }
+/* LineNumbersTable */ .chroma .lnt { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#756d59 }
+/* LineNumbers */ .chroma .ln { white-space:pre;-webkit-user-select:none;user-select:none;margin-right:0.4em;padding:0 0.4em 0 0.4em;color:#756d59 }
+/* Line */ .chroma .line { display:flex; }
+/* Keyword */ .chroma .k { color:#fe8019 }
+/* KeywordConstant */ .chroma .kc { color:#fe8019 }
+/* KeywordDeclaration */ .chroma .kd { color:#fe8019 }
+/* KeywordNamespace */ .chroma .kn { color:#fe8019 }
+/* KeywordPseudo */ .chroma .kp { color:#fe8019 }
+/* KeywordReserved */ .chroma .kr { color:#fe8019 }
+/* KeywordType */ .chroma .kt { color:#fabd2f }
 /* Name */ .chroma .n {  }
-/* NameAttribute */ .chroma .na { color: #a6e22e }
-/* NameBuiltin */ .chroma .nb {  }
+/* NameAttribute */ .chroma .na { color:#b8bb26;font-weight:bold }
+/* NameBuiltin */ .chroma .nb { color:#fabd2f }
 /* NameBuiltinPseudo */ .chroma .bp {  }
-/* NameClass */ .chroma .nc { color: #a6e22e }
-/* NameConstant */ .chroma .no { color: #66d9ef }
-/* NameDecorator */ .chroma .nd { color: #a6e22e }
-/* NameEntity */ .chroma .ni {  }
-/* NameException */ .chroma .ne { color: #a6e22e }
-/* NameFunction */ .chroma .nf { color: #a6e22e }
+/* NameClass */ .chroma .nc {  }
+/* NameConstant */ .chroma .no { color:#d3869b }
+/* NameDecorator */ .chroma .nd {  }
+/* NameEntity */ .chroma .ni { color:#fabd2f }
+/* NameException */ .chroma .ne { color:#fb4934 }
+/* NameFunction */ .chroma .nf { color:#fabd2f }
 /* NameFunctionMagic */ .chroma .fm {  }
-/* NameLabel */ .chroma .nl {  }
+/* NameLabel */ .chroma .nl { color:#fb4934 }
 /* NameNamespace */ .chroma .nn {  }
-/* NameOther */ .chroma .nx { color: #a6e22e }
+/* NameOther */ .chroma .nx {  }
 /* NameProperty */ .chroma .py {  }
-/* NameTag */ .chroma .nt { color: #f92672 }
+/* NameTag */ .chroma .nt { color:#fb4934 }
 /* NameVariable */ .chroma .nv {  }
 /* NameVariableClass */ .chroma .vc {  }
 /* NameVariableGlobal */ .chroma .vg {  }
 /* NameVariableInstance */ .chroma .vi {  }
 /* NameVariableMagic */ .chroma .vm {  }
-/* Literal */ .chroma .l { color: #ae81ff }
-/* LiteralDate */ .chroma .ld { color: #e6db74 }
-/* LiteralString */ .chroma .s { color: #e6db74 }
-/* LiteralStringAffix */ .chroma .sa { color: #e6db74 }
-/* LiteralStringBacktick */ .chroma .sb { color: #e6db74 }
-/* LiteralStringChar */ .chroma .sc { color: #e6db74 }
-/* LiteralStringDelimiter */ .chroma .dl { color: #e6db74 }
-/* LiteralStringDoc */ .chroma .sd { color: #e6db74 }
-/* LiteralStringDouble */ .chroma .s2 { color: #e6db74 }
-/* LiteralStringEscape */ .chroma .se { color: #ae81ff }
-/* LiteralStringHeredoc */ .chroma .sh { color: #e6db74 }
-/* LiteralStringInterpol */ .chroma .si { color: #e6db74 }
-/* LiteralStringOther */ .chroma .sx { color: #e6db74 }
-/* LiteralStringRegex */ .chroma .sr { color: #e6db74 }
-/* LiteralStringSingle */ .chroma .s1 { color: #e6db74 }
-/* LiteralStringSymbol */ .chroma .ss { color: #e6db74 }
-/* LiteralNumber */ .chroma .m { color: #ae81ff }
-/* LiteralNumberBin */ .chroma .mb { color: #ae81ff }
-/* LiteralNumberFloat */ .chroma .mf { color: #ae81ff }
-/* LiteralNumberHex */ .chroma .mh { color: #ae81ff }
-/* LiteralNumberInteger */ .chroma .mi { color: #ae81ff }
-/* LiteralNumberIntegerLong */ .chroma .il { color: #ae81ff }
-/* LiteralNumberOct */ .chroma .mo { color: #ae81ff }
-/* Operator */ .chroma .o { color: #f92672 }
-/* OperatorWord */ .chroma .ow { color: #f92672 }
+/* Literal */ .chroma .l {  }
+/* LiteralDate */ .chroma .ld {  }
+/* LiteralString */ .chroma .s { color:#b8bb26 }
+/* LiteralStringAffix */ .chroma .sa { color:#b8bb26 }
+/* LiteralStringBacktick */ .chroma .sb { color:#b8bb26 }
+/* LiteralStringChar */ .chroma .sc { color:#b8bb26 }
+/* LiteralStringDelimiter */ .chroma .dl { color:#b8bb26 }
+/* LiteralStringDoc */ .chroma .sd { color:#b8bb26 }
+/* LiteralStringDouble */ .chroma .s2 { color:#b8bb26 }
+/* LiteralStringEscape */ .chroma .se { color:#b8bb26 }
+/* LiteralStringHeredoc */ .chroma .sh { color:#b8bb26 }
+/* LiteralStringInterpol */ .chroma .si { color:#b8bb26 }
+/* LiteralStringOther */ .chroma .sx { color:#b8bb26 }
+/* LiteralStringRegex */ .chroma .sr { color:#b8bb26 }
+/* LiteralStringSingle */ .chroma .s1 { color:#b8bb26 }
+/* LiteralStringSymbol */ .chroma .ss { color:#83a598 }
+/* LiteralNumber */ .chroma .m { color:#d3869b }
+/* LiteralNumberBin */ .chroma .mb { color:#d3869b }
+/* LiteralNumberFloat */ .chroma .mf { color:#d3869b }
+/* LiteralNumberHex */ .chroma .mh { color:#d3869b }
+/* LiteralNumberInteger */ .chroma .mi { color:#d3869b }
+/* LiteralNumberIntegerLong */ .chroma .il { color:#d3869b }
+/* LiteralNumberOct */ .chroma .mo { color:#d3869b }
+/* Operator */ .chroma .o { color:#fe8019 }
+/* OperatorWord */ .chroma .ow { color:#fe8019 }
 /* Punctuation */ .chroma .p {  }
-/* Comment */ .chroma .c { color: #75715e }
-/* CommentHashbang */ .chroma .ch { color: #75715e }
-/* CommentMultiline */ .chroma .cm { color: #75715e }
-/* CommentSingle */ .chroma .c1 { color: #75715e }
-/* CommentSpecial */ .chroma .cs { color: #75715e }
-/* CommentPreproc */ .chroma .cp { color: #75715e }
-/* CommentPreprocFile */ .chroma .cpf { color: #75715e }
+/* Comment */ .chroma .c { color:#928374;font-style:italic }
+/* CommentHashbang */ .chroma .ch { color:#928374;font-style:italic }
+/* CommentMultiline */ .chroma .cm { color:#928374;font-style:italic }
+/* CommentSingle */ .chroma .c1 { color:#928374;font-style:italic }
+/* CommentSpecial */ .chroma .cs { color:#928374;font-style:italic }
+/* CommentPreproc */ .chroma .cp { color:#8ec07c }
+/* CommentPreprocFile */ .chroma .cpf { color:#8ec07c;font-style:italic }
 /* Generic */ .chroma .g {  }
-/* GenericDeleted */ .chroma .gd { color: #f92672 }
-/* GenericEmph */ .chroma .ge { font-style: italic }
-/* GenericError */ .chroma .gr {  }
-/* GenericHeading */ .chroma .gh {  }
-/* GenericInserted */ .chroma .gi { color: #a6e22e }
-/* GenericOutput */ .chroma .go {  }
+/* GenericDeleted */ .chroma .gd { color:#282828;background-color:#fb4934 }
+/* GenericEmph */ .chroma .ge { color:#83a598;text-decoration:underline }
+/* GenericError */ .chroma .gr { background-color:#fb4934;font-weight:bold }
+/* GenericHeading */ .chroma .gh { color:#b8bb26;font-weight:bold }
+/* GenericInserted */ .chroma .gi { color:#282828;background-color:#b8bb26 }
+/* GenericOutput */ .chroma .go { color:#504945 }
 /* GenericPrompt */ .chroma .gp {  }
-/* GenericStrong */ .chroma .gs { font-weight: bold }
-/* GenericSubheading */ .chroma .gu { color: #75715e }
-/* GenericTraceback */ .chroma .gt {  }
+/* GenericStrong */ .chroma .gs {  }
+/* GenericSubheading */ .chroma .gu { color:#b8bb26;font-weight:bold }
+/* GenericTraceback */ .chroma .gt { background-color:#fb4934;font-weight:bold }
 /* GenericUnderline */ .chroma .gl {  }
 /* TextWhitespace */ .chroma .w {  }
